--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                 
             </p>
         </section>
-        <section><img src="images/istockphoto-839295596-612x612.jpg" alt=""> </section>
+        <section><img src="images/istockphoto-839295596-612x612.jpg" id="play" alt=""> </section>
         <footer>
             <a href="https://www.instagram.com/kidcochildcare/">Instagram</a>
             <a href="https://www.facebook.com/groups/daycareproviders/">FACEBOOK</a>
